--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,14 @@ footer li + li {
 
 @media (min-width: 600px) {
 
+footer {
+  text-align: center;
+  padding: 60px 0;
+  background: #ffd5d3;
+  margin-top: 60px;
+  color: rgb(155, 108, 55);
+}
+
 }
 
 @media (min-width: 800px) {
